// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImprovementProjectHeader > renders correctly if project is finished 1`] = `
<v-row-stub
  class="mb-7 mx-3 justify-space-between align-start"
  data-v-82d246da=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <div
    class="mr-8"
    data-v-82d246da=""
  >
    <span
      class="text-headline-large text-high-emphasis mr-5"
      data-v-82d246da=""
    >
      test project
    </span>
    <span
      class="text-medium-emphasis text-body-medium text-no-wrap"
      data-v-82d246da=""
    >
      01.01.2020 - 01.01.2021
    </span>
  </div>
  <div
    class="mt-2 project-action-btns"
    data-v-82d246da=""
  >
    <copy-to-clipboard-button-stub
      content=""
      data-v-82d246da=""
      istext="false"
      shorten="false"
    />
    <evocon-v-button-stub
      class="mx-1"
      color="grey-darken-4"
      data-v-82d246da=""
      icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
      iconcolor=""
      text=""
      textclass=""
      type="primary"
    />
    <evocon-v-button-stub
      class="mx-1"
      color="grey-darken-4"
      data-v-82d246da=""
      icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      iconcolor=""
      text=""
      textclass=""
      type="primary"
    />
    <evocon-v-button-stub
      class="mx-3"
      color="primary"
      data-v-82d246da=""
      icon=""
      iconcolor=""
      prepend-icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      text="Edit"
      textclass=""
      type="primary"
    />
    <evocon-v-button-stub
      class="ml-3"
      color="secondary"
      data-v-82d246da=""
      icon=""
      iconcolor=""
      prepend-icon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
      text="Reopen"
      textclass=""
      type="primary"
    />
  </div>
</v-row-stub>
`;

exports[`ImprovementProjectHeader > renders correctly if project is not finished 1`] = `
<v-row-stub
  class="mb-7 mx-3 justify-space-between align-start"
  data-v-82d246da=""
  dense="false"
  density="default"
  nogutters="false"
  tag="div"
>
  <div
    class="mr-8"
    data-v-82d246da=""
  >
    <span
      class="text-headline-large text-high-emphasis mr-5"
      data-v-82d246da=""
    >
      test project
    </span>
    <span
      class="text-medium-emphasis text-body-medium text-no-wrap"
      data-v-82d246da=""
    >
      01.01.2020 - 01.01.2021
    </span>
  </div>
  <div
    class="mt-2 project-action-btns"
    data-v-82d246da=""
  >
    <copy-to-clipboard-button-stub
      content=""
      data-v-82d246da=""
      istext="false"
      shorten="false"
    />
    <evocon-v-button-stub
      class="mx-1"
      color="grey-darken-4"
      data-v-82d246da=""
      icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
      iconcolor=""
      text=""
      textclass=""
      type="primary"
    />
    <evocon-v-button-stub
      class="mx-1"
      color="grey-darken-4"
      data-v-82d246da=""
      icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      iconcolor=""
      text=""
      textclass=""
      type="primary"
    />
    <!--v-if-->
    <evocon-v-button-stub
      class="ml-3"
      color="primary"
      data-v-82d246da=""
      icon=""
      iconcolor=""
      prepend-icon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
      text="Finish"
      textclass=""
      type="primary"
    />
  </div>
</v-row-stub>
`;
